--- a/inst/veiledning.Rmd
+++ b/inst/veiledning.Rmd
@@ -8,6 +8,7 @@ output:
 ---
 
 # Lag et register i Rapporteket
+tatatatatatata
 Beskrivelsen under er ikke nødvendigvis utfyllende og forutsetter kjennskap til RStudio og bruk av git og GitHub. Som en ekstra støtte anbefales [R pacakges](http://r-pkgs.had.co.nz/) av Hadley Wickham og spesielt [beskrivelsen av git og GitHub](http://r-pkgs.had.co.nz/git.html#git-rstudio).
 
 ## Prøv templatet
