--- a/inst/registreringer.Rmd
+++ b/inst/registreringer.Rmd
@@ -1,22 +1,134 @@
 ---
 title: "Registreringer"
 author: "Ingrid Bondevik"
-date: "2025-04-15"
-output: html_document
+date: '`r format(Sys.time(), "%d. %B %Y")`'
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
+library(tidyverse)
+```
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+
+```{r}
+
+g <- regdata %>% 
+  count(PID) %>% 
+  rename(count_PID = n)
+
+h <- left_join(regdata, g)
+
+h %>% 
+  select(CURRENT_SURGERY, count_PID) %>% 
+  filter(CURRENT_SURGERY == 1 & count_PID > 1)
+
+h %>% 
+  filter(count_PID > 1 & is.na(FILLING_DATE)) %>% 
+  select(MCEID)
+
+h %>% 
+  filter(is.na(SURGERY_DATE)) # & count_PID > 1)
+
+
+
+```
+
+
+
+Dette er en oversikt over registreringene i registeret. Oversikten viser registreringer per måned, per skjema og per sykehus. 
+
 
 ```{r cars}
-summary(cars)
+# Jeg lager en tabell med oversikt over operasjonsdato: 
+# antall operasjoner pr. måned pr. år for hvert sykehus
+
+tbl_reg2 <- function(month, year, data) {
+  
+  reg_data <- data %>% 
+    group_by(year(SURGERY_DATE), month(SURGERY_DATE)) %>% 
+    count(Sykehus) %>% 
+    rename(mnd = `month(SURGERY_DATE)`,
+           aar = `year(SURGERY_DATE)`)
+  
+  reg_tbl <- reg_data %>% 
+    filter(mnd <= month & aar == year) %>% 
+    pivot_wider(names_from = c(mnd, aar),names_sep = "-", values_from = n) %>% 
+    mutate_all(~replace(., is.na(.), 0))
+
+  return (reg_tbl)
+  
+}
+
+r <- tbl_reg2(9, 2024, regdata)
+
+
+tbl_reg <- function(date1, date2, data) {
+  
+  reg_data <- data %>%
+    dplyr::filter(dplyr::between(SURGERY_DATE,
+                                 as.Date({{date1}}, format = "%d-%m-%Y"),
+                                 as.Date({{date2}}, format = "%d-%m-%Y"))) %>%
+    group_by(year(SURGERY_DATE), month(SURGERY_DATE)) %>%
+    count(Sykehus) %>%
+    rename(mnd = `month(SURGERY_DATE)`,
+           aar = `year(SURGERY_DATE)`)
+
+  reg_tbl <- reg_data %>%
+    pivot_wider(names_from = c(mnd, aar),names_sep = "-", values_from = n) %>%
+    mutate_all(~replace(., is.na(.), 0))
+
+  return (reg_tbl)
+  
+}
+
+rr <- tbl_reg("01-09-2024", "01-01-2025", regdata)
+
+
+```
+
+
+```{r}
+# Jeg lager en tabell med oversikt over antall registreringer pr. skjema pr. sykehus
+# Her kan bruker selv velge tidsrom 
+
+tbl_skjema_reg <- function (date1, date2, data) {
+
+  tbl_skjema <- regdata %>%
+    dplyr::filter(dplyr::between(SURGERY_DATE,
+                                   as.Date({{date1}}, format = "%d-%m-%Y"),
+                                   as.Date({{date2}}, format = "%d-%m-%Y"))) %>%
+    group_by(Sykehus) %>% 
+    mutate(patient = sum(!is.na(REGISTERED_DATE)),
+           patient_form = sum(!is.na(FILLING_DATE)),
+           surgeon_form = sum(!is.na(SURGERY_DATE)),
+           patient_followup3mths = sum(!is.na(FOLLOWUP)),
+           surgeon_followup3mths = sum(!is.na(FOLLOWUP_surgeon3mths)),
+           patient_followup12mths = sum(!is.na(FOLLOWUP_patient12mths)),
+           surgeon_followup12mths = sum(!is.na(FOLLOWUP_surgeon12mths)),
+           patient_followup60mths = sum(!is.na(FOLLOWUP_patient60mths))) %>% 
+    select(c(Sykehus, 
+             patient, 
+             patient_form, 
+             surgeon_form, 
+             patient_followup3mths, 
+             surgeon_followup3mths, 
+             patient_followup12mths,
+             surgeon_followup12mths,
+             patient_followup60mths)) %>% 
+    unique()
+ 
+  return(tbl_skjema) 
+}
+
+gg <- tbl_skjema_reg("01-09-2024", "01-01-2025", regdata)
+
 ```
 
 ## Including Plots
@@ -24,7 +136,7 @@ summary(cars)
 You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
-plot(pressure)
+print(g)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
