Endret tekst i veiledningsdokumentet

--- a/inst/veiledning.Rmd
+++ b/inst/veiledning.Rmd
@@ -12,8 +12,8 @@ Velkommen til Rapporteket for Deformitetsregisteret. I rapporteket er det mulig 
 Dersom du ikke tilhører registerledelsen vil figurene sammenligne din enhet med resten av landet. Det vil si at det ikke er mulig å se tall for hver enkelt av de andre enhetene.
 
 ## Om registeret
-Deformitetsregisteret er en del av NKR (Nasjonalt kvalitetsregister for ryggkirurgi). Fra 01.01.23 registreres alle operasjoner for idiopatisk skoliose utført i Norge, uavhengig av pasientens alder. Idiopatisk skoliose er en tilstand som debuterer hos barn og ungdom, og de fleste som opereres gjør dette i tenårene. Kirurgi er omfattende med fare for alvorlige komplikasjoner både på kort og lang sikt. Det har stor verdig for kvalitetsforbedrende arbeid og forskning at disse pasientene er registrert i et nasjonalt register. I Norge behandles idiopatisk skoliose ved universitetssykehusene Haukeland, St.Olav og Rikshospitalet. Alle 3 sykehus rapporterer sine operasjoner til registeret. 
+Deformitetsregisteret er en del av NKR (Nasjonalt kvalitetsregister for ryggkirurgi). Fra 01.01.23 registreres alle operasjoner for idiopatisk skoliose utført i Norge, uavhengig av pasientens alder. Idiopatisk skoliose er en tilstand som debuterer hos barn og ungdom, og de fleste som opereres gjør dette i tenårene. Kirurgi er omfattende med fare for alvorlige komplikasjoner både på kort og lang sikt. Kirurgi medfører en livsvarig lang avstiving av ryggsøylen med metallimplantater. Det har stor verdi for kvalitetsforbedrende arbeid og forskning at disse pasientene er registrert i et nasjonalt register. Oppfølging med pasientrapporterte data samlet i register er nødvendig for å kunne oppdage endring i livskvalitet og eventuelle komplikasjoner på lang sikt. 
+I Norge behandles idiopatisk skoliose ved Haukeland Universitetssjukehus, St.Olavs hospital og Rikshospitalet-OUS. Alle 3 sykehus rapporterer sine operasjoner til registeret. 
 
-Ved inkludering i registeret fyller pasienten ut samtykke og preoperativt skjema. Kirurg fyller ut legeskjema etter operasjon. Pasienter fyller ut skjema postoperativt etter 3-6 måneder, 12 måneder og 5 år. Lege fyller ut kontrollskjema etter 3-6 måneder og 12 måneder. 
-
-Alle reoperasjoner registreres. Dersom pasienter med skoliose opereres for en annen degenerativ rygglidelse (spinal stenose, prolaps etc.) registreres dette i NKR degenerativ, ikke i Deformitet.
+Ved inkludering i registeret fyller pasienten ut samtykke og preoperativt skjema. Kirurg fyller ut legeskjema etter operasjon. Pasienter fyller ut skjema postoperativt etter 6 måneder, 2år og 5 år. Dette blir tilsendt og fylles ut elektronisk.
+Alle reoperasjoner skal registreres. Dersom pasienter med skoliose opereres for en annen degenerativ rygglidelse (spinal stenose, prolaps etc.) registreres dette i NKR degenerativ, ikke i Deformitet.
